# foxess-amber-pvpp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  prompt.md  pyproject.toml
.github/workflows/: test.yml
backend/tests/: conftest.py
backend/tests/integration/: test_api_analytics.py  test_api_battery.py  test_api_calendar.py  test_api_health.py  test_api_preferences.py  test_api_pricing.py  test_api_profiles.py  test_api_schedule.py  test_api_status.py  test_migrations.py  test_pipeline_aggregator.py  test_pipeline_amber.py  test_pipeline_analytics.py  test_pipeline_foxess.py  test_pipeline_solar.py  (+1 more)
data/: DATA_PIPELINE.md
data/migrations/: 001_initial_schema.sql  002_foxess_api_budget.sql  003_profiles_calendar.sql
docs/: PRD.md  TEST_STRATEGY.md
docs/architecture/: API_CONTRACT.md  ARCHITECTURE.md
docs/design/: DESIGN_SYSTEM.md  IA.md  WIREFRAMES.md
docs/features/: RECOMMENDATION_MODE.md
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
mobile/: App.tsx  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
shared/: package.json
shared/src/: api-client.ts  types.ts
src/api/: dependencies.py  main.py  state.py  websocket.py
src/engine/: budget.py  executor.py  optimizer.py  profiles.py  scheduler.py  strategy.py
src/pipeline/: __init__.py  aggregator.py  amber_collector.py  analytics.py  db.py  foxess_collector.py  solar_forecast_collector.py
src/shared/: config.py  logging.py  models.py
(+126 files in other folders)
