[tool.poetry]
name = "battery-brain"
version = "0.1.0"
description = "Home battery management system integrating FoxESS inverter and Amber Electric real-time pricing"
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"

# External API SDKs
amberelectric = ">=2.0.0"
foxesscloud = ">=2.9.8"

# HTTP client (Open-Meteo solar forecast)
httpx = ">=0.27.0"

# foxesscloud undeclared transitive deps
requests = ">=2.31.0"
matplotlib = ">=3.8.0"

# In-process scheduler (collectors + decision engine)
apscheduler = ">=3.10.0"

# Structured logging
structlog = ">=24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"          # AsyncClient for FastAPI integration tests
pytest-cov = ">=5.0.0"      # Coverage reporting
pytest-mock = ">=3.14.0"    # mocker fixture
websockets = ">=12.0"       # Required by Starlette TestClient WebSocket support

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = [".", "backend"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 20
